--- a/mlp.ipynb
+++ b/mlp.ipynb
@@ -163,23 +163,18 @@
     "for p in params:\n",
     "    p.requires_grad = True\n",
     "\n",
-    "# Training loop\n",
     "for k in range(N_ITERS):\n",
-    "    # Forward pass\n",
     "    emb = c[x_batch]\n",
     "    h = torch.tanh(emb.view(-1, 6) @ w1 + b1)\n",
     "    logits = h @ w2 + b2\n",
     "    loss = F.cross_entropy(logits, y_batch)\n",
     "\n",
-    "    # Backward pass\n",
     "\n",
-    "    # Zero all of the gradietns\n",
     "    for p in params:\n",
     "        p.grad = None\n",
     "\n",
     "    loss.backward()\n",
     "\n",
-    "    # Update the parameters\n",
     "    for p in params:\n",
     "        p.data = p.data - LEARN_RATE * p.grad\n",
     "\n",
@@ -475,7 +470,6 @@
     "param_grid = ParameterGrid(params)\n",
     "\n",
     "for pset in tqdm(param_grid):\n",
-    "    # Build network\n",
     "    g = torch.Generator().manual_seed(2147483647)\n",
     "    c = torch.randn((27, 10), generator=g, requires_grad=True)\n",
     "    w1 = torch.randn((30, 200), generator=g, requires_grad=True)\n",
@@ -484,30 +478,23 @@
     "    b2 = torch.randn(27, generator=g)\n",
     "    params = [c, w1, b1, w2, b2]\n",
     "\n",
-    "    # Make sure to enable gradients!\n",
     "    for p in params:\n",
     "        p.requires_grad = True\n",
     "\n",
-    "    # Training loop\n",
     "    for k in range(pset[\"num_iters\"]):\n",
-    "        # Sample a random batch of data\n",
     "        rand_idxs = torch.randint(0, x_train.shape[0], (pset[\"batch_size\"], ))\n",
     "        x_batch = x_train[rand_idxs]\n",
     "        y_batch = y_train[rand_idxs]\n",
     "\n",
-    "        # Forward pass\n",
     "        emb = c[x_batch]\n",
     "        h = torch.tanh(emb.view(-1, w1.shape[0]) @ w1 + b1)\n",
     "        logits = h @ w2 + b2\n",
     "        loss = F.cross_entropy(logits, y_batch)\n",
     "        \n",
-    "        # Backward pass\n",
-    "        # Zero all of the gradietns\n",
     "        for p in params:\n",
     "            p.grad = None\n",
     "        loss.backward()\n",
     "\n",
-    "        # Update the parameters\n",
     "        lr = (pset[\"learn_rate\"] / 10) if k > pset[\"num_iters\"] / 2 else pset[\"learn_rate\"] \n",
     "        for p in params:\n",
     "            p.data = p.data - lr * p.grad\n",
@@ -556,26 +543,21 @@
     "for  p in params:\n",
     "    p.requires_grad = True\n",
     "\n",
-    "# Training loop\n",
     "for k in range(N_ITERS):\n",
-    "    # Sample a random batch of data\n",
     "    rand_idxs = torch.randint(0, x_train.shape[0], (BATCH_SIZE, ))\n",
     "    x_batch = x_train[rand_idxs]\n",
     "    y_batch = y_train[rand_idxs]\n",
     "\n",
-    "    # Forward pass\n",
     "    emb = c[x_batch]\n",
     "    h = torch.tanh(emb.view(-1, w1.shape[0]) @ w1 + b1)\n",
     "    logits = h @ w2 + b2\n",
     "    loss = F.cross_entropy(logits, y_batch)\n",
     "    losses.append(loss.item())\n",
     "    \n",
-    "    # Backward pass\n",
     "    for p in params:\n",
     "        p.grad = None\n",
     "    loss.backward()\n",
     "\n",
-    "    # Update the parameters\n",
     "    if k > N_ITERS / 2:\n",
     "        lr = (LEARN_RATE / 10)\n",
     "    elif k > N_ITERS / 4:\n",
@@ -643,7 +625,6 @@
     }
    ],
    "source": [
-    "# Forward pass\n",
     "emb = c[x_train]\n",
     "h = torch.tanh(emb.view(-1, w1.shape[0]) @ w1 + b1)\n",
     "logits = h @ w2 + b2\n",
@@ -765,25 +746,20 @@
     "params = [c, w1, b1, w2, b2, w0]\n",
     "losses = []\n",
     "\n",
-    "# Make sure to enable gradients!\n",
     "for p in params:\n",
     "    p.requires_grad = True\n",
     "\n",
-    "# Training loop\n",
     "for k in range(N_ITERS):\n",
-    "    # Forward pass\n",
     "    emb = c[x_batch]\n",
     "    h = torch.tanh(emb.view(-1, 3 * c.shape[1]) @ w1 + b1)\n",
     "    logits = h @ w2 + b2 + emb.view(-1, w1.shape[0]) @ w0\n",
     "    loss = F.cross_entropy(logits, y_batch)\n",
     "    losses.append(loss.item())\n",
-    "    # Backward pass\n",
     "    for p in params:\n",
     "        p.grad = None\n",
     "\n",
     "    loss.backward()\n",
     "\n",
-    "    # Update the parameters\n",
     "    for p in params:\n",
     "        p.data = p.data - LEARN_RATE * p.grad\n",
     "\n",
@@ -1026,7 +1002,6 @@
     "param_grid = ParameterGrid(params)\n",
     "\n",
     "for pset in tqdm(param_grid):\n",
-    "    # Build network\n",
     "    g = torch.Generator().manual_seed(127207)\n",
     "    c = torch.randn((27, 10), generator=g)\n",
     "    w1 = torch.randn((30, 200), generator=g)\n",
@@ -1036,25 +1011,19 @@
     "    w0 = torch.randn((30, 27), generator=g)\n",
     "    params = [c, w1, b1, w2, b2, w0]\n",
     "\n",
-    "    # Make sure to enable gradients!\n",
     "    for p in params:\n",
     "        p.requires_grad = True\n",
     "\n",
-    "    # Training loop\n",
     "    for k in range(pset[\"num_iters\"]):\n",
-    "        # Sample a random batch of data\n",
     "        rand_idxs = torch.randint(0, x_train.shape[0], (pset[\"batch_size\"], ))\n",
     "        x_batch = x_train[rand_idxs]\n",
     "        y_batch = y_train[rand_idxs]\n",
     "\n",
-    "        # Forward pass\n",
     "        emb = c[x_batch]\n",
     "        h = torch.tanh(emb.view(-1, 3 * c.shape[1]) @ w1 + b1)\n",
     "        logits = h @ w2 + b2 + emb.view(-1, w1.shape[0]) @ w0\n",
     "        loss = F.cross_entropy(logits, y_batch)\n",
     "\n",
-    "        # Backward pass\n",
-    "        # Zero all of the gradietns\n",
     "        for p in params:\n",
     "            p.grad = None\n",
     "\n",
@@ -1308,7 +1277,6 @@
     "reg_strength = 0.01\n",
     "\n",
     "for pset in tqdm(param_grid):\n",
-    "    # Build network\n",
     "    g = torch.Generator().manual_seed(613726192)\n",
     "    c = torch.randn((27, 10), generator=g)\n",
     "    w1 = torch.randn((30, 200), generator=g)\n",
@@ -1318,30 +1286,23 @@
     "    w0 = torch.randn((30, 27), generator=g)\n",
     "    params = [c, w1, b1, w2, b2, w0]\n",
     "\n",
-    "    # Make sure to enable gradients!\n",
     "    for p in params:\n",
     "        p.requires_grad = True\n",
-    " # Training loop\n",
     "    for k in range(pset[\"num_iters\"]):\n",
-    "        # Sample a random batch of data\n",
     "        rand_idxs = torch.randint(0, x_train.shape[0], (pset[\"batch_size\"], ))\n",
     "        x_batch = x_train[rand_idxs]\n",
     "        y_batch = y_train[rand_idxs]\n",
     "\n",
-    "        # Forward pass\n",
     "        emb = c[x_batch]\n",
     "        h = torch.tanh(emb.view(-1, 3 * c.shape[1]) @ w1 + b1)\n",
     "        logits = h @ w2 + b2 + emb.view(-1, w1.shape[0]) @ w0\n",
     "        loss = F.cross_entropy(logits, y_batch) + reg_strength * (w0.pow(2).mean() + w1.pow(2).mean() + w2.pow(2).mean())\n",
     "\n",
-    "        # Backward pass\n",
-    "        # Zero all of the gradietns\n",
     "        for p in params:\n",
     "            p.grad = None\n",
     "\n",
     "        loss.backward()\n",
     "\n",
-    "        # Update the parameters\n",
     "        lr = (pset[\"learn_rate\"] / 10) if k > pset[\"num_iters\"] / 2 else pset[\"learn_rate\"] \n",
     "        for p in params:\n",
     "            p.data = p.data - lr * p.grad\n",
@@ -1589,10 +1550,9 @@
     "\n",
     "param_grid = ParameterGrid(params)\n",
     "reg_strength = 0.01\n",
-    "beta = 0.9 # average over last 10 values.\n",
+    "beta = 0.9 \n",
     "\n",
     "for pset in tqdm(param_grid):\n",
-    "    # Build network\n",
     "    g = torch.Generator().manual_seed(61616161616161611)\n",
     "    c = torch.randn((27, 10), generator=g)\n",
     "    w1 = torch.randn((30, 200), generator=g)\n",
@@ -1603,31 +1563,24 @@
     "    params = [c, w1, b1, w2, b2, w0]\n",
     "    param_grads = [0.0 for _ in range(len(params))]\n",
     "\n",
-    "    # Make sure to enable gradients!\n",
     "    for p in params:\n",
     "        p.requires_grad = True\n",
     "\n",
-    "    # Training loop\n",
     "    for k in range(pset[\"num_iters\"]):\n",
-    "        # Sample a random batch of data\n",
     "        rand_idxs = torch.randint(0, x_train.shape[0], (pset[\"batch_size\"], ))\n",
     "        x_batch = x_train[rand_idxs]\n",
     "        y_batch = y_train[rand_idxs]\n",
     "\n",
-    "        # Forward pass\n",
     "        emb = c[x_batch]\n",
     "        h = torch.tanh(emb.view(-1, 3 * c.shape[1]) @ w1 + b1)\n",
     "        logits = h @ w2 + b2 + emb.view(-1, w1.shape[0]) @ w0\n",
     "        loss = F.cross_entropy(logits, y_batch) + reg_strength * (w0.pow(2).mean() + w1.pow(2).mean() + w2.pow(2).mean())\n",
     "\n",
-    "        # Backward pass\n",
-    "        # Zero all of the gradietns\n",
     "        for p in params:\n",
     "            p.grad = None\n",
     "\n",
     "        loss.backward()\n",
     "\n",
-    "        # Update the parameters\n",
     "        lr = (pset[\"learn_rate\"] / 10) if k > pset[\"num_iters\"] / 2 else pset[\"learn_rate\"] \n",
     "        for idx, p in enumerate(params):\n",
     "            param_grads[idx] = beta * param_grads[idx] + (1 - beta) * p.grad\n",
@@ -1659,7 +1612,7 @@
     "LEARN_RATE = 0.1\n",
     "BATCH_SIZE = 256\n",
     "N_ITERS = 200000\n",
-    "BETA = 0.9 # average over last 10 values.\n",
+    "BETA = 0.9 \n",
     "REG_STRENGTH = 0.01"
    ]
   },
@@ -1677,31 +1630,26 @@
     }
    ],
    "source": [
-    "# Make sure to enable gradients!\n",
     "for p in params:\n",
     "    p.requires_grad = True\n",
     "\n",
     "for k in range(N_ITERS):\n",
-    "    # Sample a random batch of data\n",
     "    rand_idxs = torch.randint(0, x_train.shape[0], (BATCH_SIZE, ))\n",
     "    x_batch = x_train[rand_idxs]\n",
     "    y_batch = y_train[rand_idxs]\n",
     "\n",
-    "    # Forward pass\n",
     "    emb = c[x_batch]\n",
     "    h = torch.tanh(emb.view(-1, 3 * c.shape[1]) @ w1 + b1)\n",
     "    logits = h @ w2 + b2 + emb.view(-1, w1.shape[0]) @ w0\n",
     "    loss = F.cross_entropy(logits, y_batch) + REG_STRENGTH * (w0.pow(2).mean() + w1.pow(2).mean() + w2.pow(2).mean())\n",
     "\n",
-    "    # Backward pass\n",
-    "    # Zero all of the gradietns\n",
+    "    \n",
     "    for p in params:\n",
     "        p.grad = None\n",
     "\n",
     "    loss.backward()\n",
     "\n",
-    "    # Update the parameters\n",
-    "    # Update the parameters\n",
+    "    \n",
     "    if k > N_ITERS / 2:\n",
     "        lr = (LEARN_RATE / 10)\n",
     "    elif k > N_ITERS / 4:\n",
@@ -1754,14 +1702,13 @@
     }
    ],
    "source": [
-    "# sample from the model\n",
     "g = torch.Generator().manual_seed(694390)\n",
     "\n",
     "for _ in range(20):\n",
     "    out = []\n",
-    "    context = [0] * block_size # initialize with all ...\n",
+    "    context = [0] * block_size \n",
     "    while True:\n",
-    "      emb = c[torch.tensor([context])] # (1,block_size,d)\n",
+    "      emb = c[torch.tensor([context])] \n",
     "      h = torch.tanh(emb.view(1, -1) @ w1 + b1)\n",
     "      logits = h @ w2 + b2 + emb.view(-1, w1.shape[0]) @ w0\n",
     "      probs = F.softmax(logits, dim=1)\n",
